add basic styles to styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,14 @@
 
 p {
   font-size: 20px;
-  color: blue;
+  font-weight: bold;
 }
 
 span {
   font size: 16px;
-  color: red
+  color: blue
+}
+
+h1 {
+  font-weight: bold
 }
